--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -8,7 +8,7 @@ $browser-context: 11;
     @if unitless($context) {
         $context: $context * 1px;
     }
-    @return $pixels / $context * 1em;
+    @return calc($pixels / $context * 1em);
 }
 
 .main-window {
