--- a/src/mycroft-settings.ui
+++ b/src/mycroft-settings.ui
@@ -1,20 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface domain="gnome-shell-extension-mycroft">
   <requires lib="gtk" version="4.0"/>
+  
+  
   <object class="GtkFileChooserDialog" id="select-folder">
+    <property name="can_focus">False</property>
     <property name="action">select-folder</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">0</property>
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
         <child internal-child="action_area">
           <object class="GtkBox">
-            <property name="halign">center</property>
-            <property name="can-focus">False</property>
+            <property name="can_focus">False</property>
+            <child>
+              <object class="GtkButton" id="close-button">
+                <property name="label" translatable="yes">Close</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton" id="ok-button">
+                <property name="label" translatable="yes">Select Folder</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+            </child>
           </object>
+        </child>
+        <child>
+          <placeholder/>
         </child>
       </object>
     </child>
   </object>
+
+  
   <object class="GtkNotebook" id="mycroft-pref">
     <property name="focusable">1</property>
     <property name="hexpand">1</property>
